Change in the new Branch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>This is Git kurs</h1>
+<h1>This is a neu branch</h1>
     <script src="app.js"></script>
 </body>
 </html>
