--- a/index.html
+++ b/index.html
@@ -1,13 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bootstrap 5</title>
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href="./Css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body::before {
+            display: block;
+            content: '';
+            height: 50px;
+        }
+    </style>
 </head>
+
 <body>
-<h1>We learning now the Github Tecnolody  </h1>
-    <script src="app.js"></script>
+    <!--Navbar-->
+    <div class="navbar navbar-expand-md bg-dark navbar-dark text-white fixed-top">
+        <div class="container">
+            <a href="" class="navbar-brand">Bootstrap 5</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainmenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="mainmenu">
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a href="#hero" class="nav-link">Get started</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#askme" class="nav-link">Ask me</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#Features" class="nav-link">Features</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">learn</a>
+                    <ul class="dropdown-memu">
+                        <li><a href="#learnbootstrap" class="dropdown-item">learn bootstrap</a></li>
+                        <li><a href="#wheretogo" class="dropdown-item">Where to go next</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+
+    <!--Hero-->
+    <section id="hero" class="bg-dark text-light text-center text-md-start py-5">
+        <div class="container ">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="py-3">
+                    <h1>Learn <span class="text-info">Bootstrap</span></h1>
+                    <p class="py-1 lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid cumque nihil
+                        tenetur laborum
+                        eos.
+                        Ratione incidunt perferendis hic amet magnam facilis id facere repellendus, labore perspiciatis
+                        sequi nobis, impedit accusantium!</p>
+                    <button class="btn btn-info">Get started</button>
+                </div>
+                <img class="d-none d-md-block img-fluid w-50" src="./img/hero-img.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+    <!--Services-->
+    <section class="py-5" id="Features">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 col-lg-4 col-sm-12 ">
+                    <div class="card bg-dark text-light mb-3 ">
+                        <!-- <img src="https://picsum.photos/seed/picsum/300/200"
+                         alt="" class="card-img-top">-->
+                        <div class="h3 mt-3">
+                            <i class="bi bi-arrow-left-right text-info"></i>
+                        </div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title text-info">Responsive</h4>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
+                                mollitia provident esse inventore porro, quidem ut libero nisi excepturi!</p>
+
+                            <a href="#" class="btn btn-info">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 col-sm-6 ">
+                    <div class="card bg-dark text-light mb-3">
+                        <!-- <img src="https://picsum.photos/seed/picsum/300/200"
+                         alt="" class="card-img-top">-->
+                        <div class="h3 mt-3">
+                            <i class="bi bi-battery-charging text-info"></i>
+                        </div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title text-info">Fast working</h4>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
+                                mollitia provident esse inventore porro, quidem ut libero nisi excepturi!</p>
+
+                            <a href="#" class="btn btn-info">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 col-sm-6 ">
+                    <div class="card bg-dark text-light mb-3">
+                        <!-- <img src="https://picsum.photos/seed/picsum/300/200"
+                         alt="" class="card-img-top">-->
+                        <div class="h3 mt-3">
+                            <i class="bi bi-arrow-left-right text-info"></i>
+                        </div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title text-info">Easy Styling</h4>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
+                                mollitia provident esse inventore porro, quidem ut libero nisi excepturi!</p>
+
+                            <a href="#" class="btn btn-info">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!--what to learn-->
+    <section id="learnbootstrap" class="py-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md">
+                    <img src="./img/learn.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md">
+                    <h3>Learn the basic</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sed repellendus hic tempora
+                        nostrum cumque odio officia praesentium quia, impedit sint esse quo, voluptatem beatae. Optio ab
+                        reprehenderit perferendis ducimus.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus velit accusantium nisi
+                        tempora ad itaque quibusdam, maiores laborum quis ducimus ipsum quo, incidunt omnis nam eos sit
+                        nesciunt soluta perspiciatis!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--what to learn next-->
+    <section id="wheretogo" class="py-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-center flex-row-reverse">
+                <div class="col-md">
+                    <img src="./img/learn.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md">
+                    <h3>Where to go next</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sed repellendus hic tempora
+                        nostrum cumque odio officia praesentium quia, impedit sint esse quo, voluptatem beatae. Optio ab
+                        reprehenderit perferendis ducimus.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus velit accusantium nisi
+                        tempora ad itaque quibusdam, maiores laborum quis ducimus ipsum quo, incidunt omnis nam eos sit
+                        nesciunt soluta perspiciatis!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--faq-->
+    <section class="py-5" id="askme">
+        <div class="container">
+            <h2 class="text-center mb-3">
+                Frequently asked questions
+            </h2>
+            <div class="accordion accordion-flush" id="accord">
+                <div class="accordion-item">
+                    <h4 class="accordion-header" id="question1">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#answer1">Question1</button>
+                    </h4>
+                    <div class="accordion-collapse collapse p-4" id="answer1" data-bs-parent="#accord">Lorem ipsum dolor
+                        sit
+                        amet, consectetur
+                        adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
+                        inventore voluptates eaque omnis consequuntur beatae ipsam excepturi fuga! Hic, ad!</div>
+
+                </div>
+                <div class="accordion-item">
+                    <h4 class="accordion-header" id="question3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#answer3">Question1</button>
+                    </h4>
+                    <div class="accordion-collapse collapse p-4" id="answer3" data-bs-parent="#accord">Lorem ipsum dolor
+                        sit
+                        amet, consectetur
+                        adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
+                        inventore voluptates eaque omnis consequuntur beatae ipsam excepturi fuga! Hic, ad!</div>
+
+                </div>
+                <div class="accordion-item">
+                    <h4 class="accordion-header" id="question2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#answer2">Question1</button>
+                    </h4>
+                    <div class="accordion-collapse collapse p-4" id="answer2" data-bs-parent="#accord">Lorem ipsum dolor
+                        sit
+                        amet, consectetur
+                        adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
+                        inventore voluptates eaque omnis consequuntur beatae ipsam excepturi fuga! Hic, ad!</div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--faq-->
+    <footer class="p-3 bg-dark text-white text-center">
+        <div class="container">
+            <p class="lead">Copyright &COPY;</p>
+            <a href="#">
+                <i class="bi bi-arrow-up-circle h2"></i>
+            </a>
+        </div>
+    </footer>
+
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
