--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap 5</title>
+    <title>Test Site</title>
     <!-- Option 1: Include in HTML -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="./Css/bootstrap.min.css" rel="stylesheet">
@@ -181,7 +181,8 @@
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#answer1">Question1</button>
                     </h4>
-                    <div class="accordion-collapse collapse p-4" id="answer1" data-bs-parent="#accord">Lorem ipsum dolor
+                    <div class="accordion-collapse collapse p-4" id="answer1" data-bs-parent="#accord">Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Nam, ratione? Lorem ipsum dolor
                         sit
                         amet, consectetur
                         adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
@@ -191,9 +192,12 @@
                 <div class="accordion-item">
                     <h4 class="accordion-header" id="question3">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#answer3">Question1</button>
+                            data-bs-target="#answer3">Question2</button>
                     </h4>
                     <div class="accordion-collapse collapse p-4" id="answer3" data-bs-parent="#accord">Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Aut cum commodi corrupti voluptas totam tempora sed
+                        perspiciatis minima dignissimos voluptate. Veniam eveniet delectus natus quia maiores rem
+                        facilis sunt. Velit. Lorem ipsum dolor
                         sit
                         amet, consectetur
                         adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
@@ -203,9 +207,13 @@
                 <div class="accordion-item">
                     <h4 class="accordion-header" id="question2">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#answer2">Question1</button>
+                            data-bs-target="#answer2">Question3</button>
                     </h4>
                     <div class="accordion-collapse collapse p-4" id="answer2" data-bs-parent="#accord">Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Ab illum dolores dolor ratione maxime incidunt illo,
+                        minus modi culpa deserunt praesentium, aliquam quia saepe delectus blanditiis molestiae sunt
+                        nostrum hic sequi aspernatur exercitationem nulla. Tenetur illum quos error reprehenderit.
+                        Rerum. Lorem ipsum dolor
                         sit
                         amet, consectetur
                         adipisicing elit. Quo tempore dolores perferendis omnis ea deserunt nulla. Deserunt debitis odit
@@ -217,7 +225,7 @@
     </section>
 
 
-    <!--faq-->
+    <!--footer-->
     <footer class="p-3 bg-dark text-white text-center">
         <div class="container">
             <p class="lead">Copyright &COPY;</p>
