--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="d-flex align-items-center justify-content-center">
                 <div class="py-3">
                     <h1>Learn <span class="text-info">Bootstrap</span></h1>
-                    <p class="py-1 lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid cumque nihil
+                    <p class="py-1 lead"> Lorem ipsum lorem dolor sit amet consectetur, adipisicing elit. Aliquid cumque nihil
                         tenetur laborum
                         eos.
                         Ratione incidunt perferendis hic amet magnam facilis id facere repellendus, labore perspiciatis
@@ -84,7 +84,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4 class="card-title text-info">Responsive</h4>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
+                            <p class="card-text">Lorem lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
                                 mollitia provident esse inventore porro, quidem ut libero nisi excepturi!</p>
 
                             <a href="#" class="btn btn-info">Learn More</a>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h4 class="card-title text-info">Easy Styling</h4>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
+                            <p class="card-text">Lorem lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum vel
                                 mollitia provident esse inventore porro, quidem ut libero nisi excepturi!</p>
 
                             <a href="#" class="btn btn-info">Learn More</a>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-md">
                     <h3>Learn the basic</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sed repellendus hic tempora
+                    <p>Lorem lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sed repellendus hic tempora
                         nostrum cumque odio officia praesentium quia, impedit sint esse quo, voluptatem beatae. Optio ab
                         reprehenderit perferendis ducimus.</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus velit accusantium nisi
