--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="container">
             <p class="lead">Copyright &COPY;</p>
             <a href="#">
-                <i class="bi bi-arrow-up-circle h2"></i>
+                <i class="bi bi-arrow-up-circle h2 text-info"></i>
             </a>
         </div>
     </footer>
